--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -8,7 +8,7 @@ on:
       - created
 
 env:
-  DOCKER_REGISTRY: "ghcr.io/nvidia/kai-scheduler"
+  DOCKER_REGISTRY: "ghcr.io/reflectionai/go-kai-scheduler"
 
 jobs:
   build-and-push:
