--- a/.github/workflows/push-artifacts.yaml
+++ b/.github/workflows/push-artifacts.yaml
@@ -14,7 +14,7 @@ permissions:
   packages: write
 
 env:
-  DOCKER_REGISTRY: "ghcr.io/nvidia/kai-scheduler"
+  DOCKER_REGISTRY: "ghcr.io/reflectionai/go-kai-scheduler"
 
 jobs:
   build-and-push:
