--- a/.github/workflows/push-artifacts.yaml
+++ b/.github/workflows/push-artifacts.yaml
@@ -1,7 +1,7 @@
 # Copyright 2025 NVIDIA CORPORATION
 # SPDX-License-Identifier: Apache-2.0
 
-name: KAI Scheduler - Upload artifacts to GitHub Container Registry
+name: KAI Scheduler - Upload artifacts to Google Artifact Registry
 on:
   push:
     branches:
@@ -11,10 +11,10 @@ on:
 
 permissions:
   contents: read
-  packages: write
+  id-token: write
 
 env:
-  DOCKER_REGISTRY: "ghcr.io/reflectionai/go-kai-scheduler"
+  DOCKER_REGISTRY: "us-central1-docker.pkg.dev/reflectionai/go-kai-scheduler"
 
 jobs:
   build-and-push:
@@ -43,12 +43,20 @@ jobs:
         with:
           go-version: '1.24.4'
 
-      - name: Log in to GitHub Container Registry
+      - name: Authenticate to Google Cloud
+        id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: 'projects/91954828978/locations/global/workloadIdentityPools/github/providers/github-olympus-ci-cd'
+          service_account: 'kai-scheduler-push@reflectionai.iam.gserviceaccount.com'
+          token_format: 'access_token'
+
+      - name: Log in to Google Artifact Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: us-central1-docker.pkg.dev
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
