--- a/deployments/kai-scheduler/templates/services/resourcereservation-serviceaccount.yaml
+++ b/deployments/kai-scheduler/templates/services/resourcereservation-serviceaccount.yaml
@@ -6,7 +6,7 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.global.resourceReservation.serviceAccount }}
   namespace: {{ .Values.global.resourceReservation.namespace }}
-{{- if .Values.global.imagePullSecrets }}
+{{- with .Values.global.imagePullSecrets }}
 imagePullSecrets:
-{{- toYaml .Values.global.imagePullSecrets | nindent 8 }}
+  {{- toYaml . | nindent 2 }}
 {{- end }}
