enable workflow dispatch on build/push CI

--- a/.github/workflows/push-artifacts.yaml
+++ b/.github/workflows/push-artifacts.yaml
@@ -3,6 +3,12 @@
 
 name: KAI Scheduler - Upload artifacts to Google Artifact Registry
 on:
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: 'Git ref to build from (commit SHA, branch name, or tag)'
+        required: true
+        type: string
   push:
     branches:
       - "main"
@@ -23,16 +29,25 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
+        with:
+          ref: ${{ github.event_name == 'workflow_dispatch' && inputs.ref || '' }}
+
+      - name: Extract package version from manual dispatch
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          PACKAGE_VERSION=0.0.0-$(git rev-parse --short HEAD)
+          echo "PACKAGE_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
+          echo $PACKAGE_VERSION
 
       - name: Extract package version from tag
-        if: startsWith(github.ref, 'refs/tags/')
+        if: github.event_name != 'workflow_dispatch' && startsWith(github.ref, 'refs/tags/')
         run: |
           PACKAGE_VERSION=${GITHUB_REF_NAME}
           echo "PACKAGE_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
           echo $PACKAGE_VERSION
 
       - name: Extract package version from branch commit
-        if: startsWith(github.ref, 'refs/heads/')
+        if: github.event_name != 'workflow_dispatch' && startsWith(github.ref, 'refs/heads/')
         run: |
           PACKAGE_VERSION=0.0.0-$(git rev-parse --short HEAD)
           echo "PACKAGE_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
@@ -65,7 +80,7 @@ jobs:
         run: make build DOCKER_BUILD_PLATFORM=linux/amd64,linux/arm64 DOCKER_REPO_BASE=${{ env.DOCKER_REGISTRY }} VERSION=$PACKAGE_VERSION DOCKER_BUILDX_ADDITIONAL_ARGS=--push
 
       - name: Tag images as latest
-        if: github.ref == 'refs/heads/main'
+        if: github.event_name != 'workflow_dispatch' && github.ref == 'refs/heads/main'
         run: |
           SERVICES="podgrouper scheduler binder resourcereservation snapshot-tool scalingpod nodescaleadjuster podgroupcontroller queuecontroller fairshare-simulator admission operator time-based-fairshare-simulator crd-upgrader"
           for SERVICE in $SERVICES; do
